@@ -18,10 +18,15 @@
 
 package com.openpojo.reflection.java.packageloader.reader;
 
+import static com.openpojo.reflection.java.packageloader.utils.Helper.getFQClassName;
+import static com.openpojo.reflection.java.packageloader.utils.Helper.isClass;
+
 import java.io.IOException;
 import java.lang.reflect.Type;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -39,114 +44,112 @@ import com.openpojo.reflection.java.Java;
 import com.openpojo.reflection.java.packageloader.impl.URLToFileSystemAdapter;
 import com.openpojo.reflection.java.packageloader.utils.Helper;
 
-import static com.openpojo.reflection.java.packageloader.utils.Helper.getFQClassName;
-import static com.openpojo.reflection.java.packageloader.utils.Helper.isClass;
-
 /**
- * This is a facade that simplifies reading classes out of a JarFile.
- * This class is also lazy loading classes upon demand, and will not initialize any of the loaded classes.
+ * This is a facade that simplifies reading classes out of a JarFile. This class
+ * is also lazy loading classes upon demand, and will not initialize any of the
+ * loaded classes.
  *
  * @author oshoukry
  */
 public class JarFileReader {
 
-  private JarFile jarFile = null;
-  private Set<String> classNames;
+	private JarFile jarFile = null;
+	private Set<String> classNames;
 
-  private JarFileReader(String jarFilePath) {
-    try {
-      jarFile = new JarFile(jarFilePath, true);
-      initClassNames();
-    } catch (Throwable ignored) {
-    }
-  }
+	private JarFileReader(String jarFilePath) {
+		try {
+			jarFile = new JarFile(jarFilePath, true);
+			initClassNames();
+		} catch (Throwable ignored) {
+		}
+	}
 
-  private JarFileReader(URL jarURL) {
-    try {
-      jarFile = ((JarURLConnection) jarURL.openConnection()).getJarFile();
-      initClassNames();
-    } catch (Throwable ignored) {
-    }
-  }
+	private JarFileReader(URL jarURL) {
+		try {
+			jarFile = ((JarURLConnection) jarURL.openConnection()).getJarFile();
+			initClassNames();
+		} catch (Throwable ignored) {
+		}
+	}
 
-  public static JarFileReader getInstance(String jarFilePath) {
-    return new JarFileReader(jarFilePath);
-  }
+	public static JarFileReader getInstance(String jarFilePath) {
+		return new JarFileReader(jarFilePath);
+	}
 
-  public static JarFileReader getInstance(URL jarURL) {
-    return new JarFileReader(jarURL);
-  }
+	public static JarFileReader getInstance(URL jarURL) {
+		return new JarFileReader(jarURL);
+	}
 
-  public boolean isValid() {
-    return jarFile != null;
-  }
+	public boolean isValid() {
+		return jarFile != null;
+	}
 
-  public Map<String, String> getManifestEntries() {
-    Map<String, String> manifestEntries = new HashMap<String, String>();
-    Manifest manifest;
-    try {
-      manifest = jarFile.getManifest();
-    } catch (IOException e) {
-      throw ReflectionException.getInstance("Failed to load Manifest-File for: " + jarFile.getName(), e);
-    }
+	public Map<String, String> getManifestEntries() {
+		Map<String, String> manifestEntries = new HashMap<String, String>();
+		Manifest manifest;
+		try {
+			manifest = jarFile.getManifest();
+		} catch (IOException e) {
+			throw ReflectionException.getInstance("Failed to load Manifest-File for: " + jarFile.getName(), e);
+		}
 
-    Attributes mainAttributes = manifest.getMainAttributes();
+		Attributes mainAttributes = manifest.getMainAttributes();
 
-    for (Attributes.Entry entry : mainAttributes.entrySet()) {
-      String key = entry.getKey() == null ? "null" : entry.getKey().toString();
-      String value = entry.getValue() == null ? "null" : entry.getValue().toString();
-      manifestEntries.put(key, value);
-    }
-    return manifestEntries;
-  }
+		for (Attributes.Entry<Object, Object> entry : mainAttributes.entrySet()) {
+			String key = entry.getKey() == null ? "null" : entry.getKey().toString();
+			String value = entry.getValue() == null ? "null" : entry.getValue().toString();
+			manifestEntries.put(key, value);
+		}
+		return manifestEntries;
+	}
 
-  public String getManifestEntry(String name) {
-    return getManifestEntries().get(name);
-  }
+	public String getManifestEntry(String name) {
+		return getManifestEntries().get(name);
+	}
 
-  private Set<String> getAllEntries() {
-    Set<String> entries = new HashSet<String>();
+	private Set<String> getAllEntries() {
+		Set<String> entries = new HashSet<String>();
 
-    ArrayList<JarEntry> jarEntries = Collections.list(jarFile.entries());
-    for (JarEntry entry : jarEntries)
-      entries.add(entry.getName());
+		ArrayList<JarEntry> jarEntries = Collections.list(jarFile.entries());
+		for (JarEntry entry : jarEntries)
+			entries.add(entry.getName());
 
-    return entries;
-  }
+		return entries;
+	}
 
-  public Set<Type> getTypesInPackage(String packageName) {
-    return Helper.loadClassesFromGivenPackage(classNames, packageName);
-  }
+	public Set<Type> getTypesInPackage(String packageName) {
+		return Helper.loadClassesFromGivenPackage(classNames, packageName);
+	}
 
-  public Set<String> getSubPackagesOfPackage(String packageName) {
-    return Helper.getSubPackagesOfPackage(classNames, packageName);
-  }
+	public Set<String> getSubPackagesOfPackage(String packageName) {
+		return Helper.getSubPackagesOfPackage(classNames, packageName);
+	}
 
-  private void initClassNames() {
-    classNames = new HashSet<String>();
-    for (String entry : getAllEntries()) {
-      if (isClass(entry))
-        classNames.add(getFQClassName(entry));
-    }
-    classNames = Collections.unmodifiableSet(classNames);
-  }
+	private void initClassNames() {
+		classNames = new HashSet<String>();
+		for (String entry : getAllEntries()) {
+			if (isClass(entry))
+				classNames.add(getFQClassName(entry));
+		}
+		classNames = Collections.unmodifiableSet(classNames);
+	}
 
-  public Set<String> getClassNames() {
-    return classNames;
-  }
+	public Set<String> getClassNames() {
+		return classNames;
+	}
 
-  public static String getJarFileNameFromURLPath(String name) {
-    String fileName = "";
+	public static String getJarFileNameFromURLPath(String name) {
+		String fileName = "";
 
-    if (null != name && name.indexOf(Java.JAR_FILE_PATH_SEPARATOR) > 0) {
-      fileName = name.substring(0, name.indexOf(Java.JAR_FILE_PATH_SEPARATOR));
-      try {
-        URLToFileSystemAdapter urlToFileSystemAdapter = new URLToFileSystemAdapter(new URL(fileName));
-        fileName = urlToFileSystemAdapter.getAsFile().getAbsolutePath();
-      } catch (MalformedURLException ignored) {
-      }
-    }
+		if (null != name && name.indexOf(Java.JAR_FILE_PATH_SEPARATOR) > 0) {
+			fileName = name.substring(0, name.indexOf(Java.JAR_FILE_PATH_SEPARATOR));
+			try {
+				URLToFileSystemAdapter urlToFileSystemAdapter = new URLToFileSystemAdapter(new URI(fileName).toURL());
+				fileName = urlToFileSystemAdapter.getAsFile().getAbsolutePath();
+			} catch (MalformedURLException | URISyntaxException ignored) {
+			}
+		}
 
-    return fileName;
-  }
+		return fileName;
+	}
 }
